--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.4",
+    "nodemailer-smtp-transport": "^2.4.2",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.4",
+    "pug": "^3.0.2",
     "sha1": "^1.1.1"
   },
   "engines": {
